--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 * {
     font-family: 'Open Sans', sans-serif;
     font-family: 'Roboto', sans-serif;
@@ -9,9 +8,16 @@
 
 
 /* navation style start */
-header{
-  padding: 40px 240px;
+header {
+    padding: 40px 240px;
 }
+
+.section-title {
+    text-align: center;
+    font-size: 45px;
+    font-weight: 700;   
+}
+
 nav {
     display: flex;
     justify-content: space-between;
@@ -19,17 +25,20 @@ nav {
     margin: 0 auto;
 }
 
-nav ul  {
+nav ul {
     display: flex;
     justify-content: center;
     padding: 10px 5px;
     border: 0;
 
 }
+
 .img-contaner {
-    width: 60px;
-    /* height: 60px; */
-    margin-bottom: 40px;
+    width: 86.041px;
+    height: 40px;
+    margin-bottom: 20px;
+    margin-top: 40px;
+ 
 
 }
 
@@ -51,9 +60,21 @@ nav li a {
     margin-left: 200px;
 }
 
+.colors {
+    color: #FF42A5;
+}
+
 
 
 /* navation style end */
+
+.button {
+    border: 0;
+    border-radius: 8px;
+    width: 262px;
+    height: 56px;
+    font-size: 20px;
+}
 
 .btn-primary-btn {
     border: none;
@@ -67,6 +88,7 @@ nav li a {
 
 
 .btn-primary-bth {
+    cursor: pointer;
     border: none;
     width: 120px;
     color: #fff;
@@ -76,6 +98,7 @@ nav li a {
 }
 
 .btn-primary-btn-1 {
+    cursor: pointer;
     border: none;
     width: 120px;
     color: #fff;
@@ -120,10 +143,11 @@ h2 {
 }
 
 .banner-img img {
-    padding: ;
-    width: 500px;
-    height: 450px;
+    
+    width: 100%;
+    height: 100%;
 }
+
 
 .banner-text {
     text-align: left;
@@ -132,6 +156,7 @@ h2 {
 }
 
 .btn-primary-btn {
+    cursor: pointer;
     margin-right: 40px;
 }
 
@@ -160,31 +185,39 @@ h2 {
 }
 
 /* online-game style */
-.color-text{
+.color-text {
     color: tomato);
 }
-h2{
+
+h2 {
     text-align: center;
- 
-}
-.online-game-text{
-    text-align: center;
-  
 
 }
-.online-game-content{
-    display: flex;
-    justify-content: center;
+
+.online-game-text {
+    text-align: center;
+
+
 }
 
-.online-game-section{
+.online-game-content {
     display: flex;
     justify-content: center;
-    
+    gap: 20px;
 }
-.section-imges{
+
+.online-game-section {
+    display: flex;
+    justify-content: center;
+
+}
+
+.section-imges {
     width: 300px;
     height: 420px;
+}
+.online-gamer-card{
+    gap: 60px;
 }
 
 
@@ -241,7 +274,7 @@ h2{
     align-items: center;
     gap: 20px;
     margin-bottom: 80px;
-  
+
 }
 
 .games-images {
@@ -252,17 +285,19 @@ h2{
     gap: 20px;
     justify-content: space-around;
 }
-.games-title{
-   
+
+.games-title {
+
     display: flex;
     justify-content: space-around;
 }
-.games-title:hover{
-   
+
+.games-title:hover {
+
     border: 1px solid tomato;
     border-radius: 50px;
     background: #FFF;
-   
+
 }
 
 
@@ -334,14 +369,14 @@ h6 {
 }
 
 /* responsive medid style */
-@media screen and (max-width: 576px){
+@media screen and (max-width: 576px) {
 
-    header{
+    header {
         margin-left: 20px;
     }
-    nav
-    {
+
+    nav {
         flex-direction: column;
     }
-    
+
 }
