--- a/style.css
+++ b/style.css
@@ -9,13 +9,13 @@
 
 /* navation style start */
 header {
-    padding: 40px 240px;
+    padding: 20px 220px;
 }
 
 .section-title {
     text-align: center;
     font-size: 45px;
-    font-weight: 700;   
+    font-weight: 700;
 }
 
 nav {
@@ -38,7 +38,7 @@ nav ul {
     height: 40px;
     margin-bottom: 20px;
     margin-top: 40px;
- 
+
 
 }
 
@@ -136,6 +136,7 @@ h2 {
 
 
 .banner-section {
+    background: url(images/Group\ 14.png);
     fill: linear-gradient(223deg, rgba(140, 87, 238, 0.03) 0%, rgba(241, 68, 174, 0.03) 100%);
     display: flex;
     justify-content: space-between;
@@ -143,7 +144,7 @@ h2 {
 }
 
 .banner-img img {
-    
+
     width: 100%;
     height: 100%;
 }
@@ -162,12 +163,13 @@ h2 {
 
 /* games section style */
 .games-container {
+    padding: 20px 150px;
     display: flex;
     justify-content: space-around;
 }
 
 .games-img {
-    width: 100%;
+    width: 80%;
 }
 
 .games-text {
@@ -189,6 +191,14 @@ h2 {
     color: tomato);
 }
 
+.online-games-container {
+    padding: 20px 120px;
+}
+
+.online-gamer-card img {
+    width: 80%;
+}
+
 h2 {
     text-align: center;
 
@@ -206,32 +216,42 @@ h2 {
     gap: 20px;
 }
 
-.online-game-section {
-    display: flex;
-    justify-content: center;
-
-}
 
 .section-imges {
     width: 300px;
     height: 420px;
 }
-.online-gamer-card{
+
+.online-gamer-card {
+  
     gap: 60px;
+    width: 40%;
+    height: 400px;
+   
+   
 }
+
+
+.color-text{
+    color: #FF42A5;
+}
+
+
 
 
 /* play container style */
 
 .play-container {
+    padding: 20px 220px;
     display: flex;
     justify-content: space-around;
 }
 
 .play-title {
-
+    font-size: 30px;
+    font-weight: 300;
     margin-bottom: 90px;
-    margin-top: 230px;
+    margin-top: 130px;
     text-align: right;
     margin-right: px;
 }
@@ -272,13 +292,13 @@ h2 {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    gap: 20px;
-    margin-bottom: 80px;
+    margin-bottom: 180px;
 
 }
 
 .games-images {
-    width: 60%;
+    padding: 20px 220px;
+    width: 65%;
     height: 20px;
     flex-wrap: wrap;
     display: flex;
@@ -287,7 +307,7 @@ h2 {
 }
 
 .games-title {
-
+    text-align: center;
     display: flex;
     justify-content: space-around;
 }
@@ -362,6 +382,12 @@ h2 {
     display: flex;
     justify-content: center;
     gap: 30px;
+}
+
+.icon {
+    width: 30.13px;
+    height: 25px;
+   
 }
 
 h6 {
