--- a/style.css
+++ b/style.css
@@ -12,57 +12,52 @@ header {
     padding: 20px 220px;
 }
 
-.section-title {
-    text-align: center;
-    font-size: 45px;
-    font-weight: 700;
+.nav-icon {
+    width: 86.041px;
+    height: 40px;
+    margin-top: 45px;
+
+}
+
+.nav-content{
+    display: flex;
+    
 }
 
 nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 0 auto;
 }
 
-nav ul {
+nav>ul {
     display: flex;
-    justify-content: center;
-    padding: 10px 5px;
-    border: 0;
 
 }
 
-.img-contaner {
-    width: 86.041px;
-    height: 40px;
-    margin-bottom: 20px;
-    margin-top: 40px;
-
-
-}
 
 nav li {
+    
     list-style: none;
-    margin-right: 30px;
-    font-weight: 500;
-    font-size: 1rem;
+    margin-right: 35px;
+    align-items: center;
+    font-size: 22px;
+    font-weight: 20px;
+}
+.nav-about{
+    margin-left: 220px;
 }
 
 nav li a {
+    
     text-decoration: none;
-    color: #424242);
-}
-
-.header-container {
-    display: flex;
-    justify-content: space-around;
-    margin-left: 200px;
+    color: #3C354F;
 }
 
 .colors {
     color: #FF42A5;
 }
+
 
 
 
@@ -76,12 +71,22 @@ nav li a {
     font-size: 20px;
 }
 
+.btn-primary {
+    width: 262px;
+    height: 56px;
+    border-radius: 8px;
+    border: none;
+    font-size: 25px;
+    background: rgba(11, 2, 35, 0.10);
+}
+
 .btn-primary-btn {
     border: none;
     border-radius: 8px;
     color: #fff;
-    width: 120px;
-    height: 40px;
+    width: 180px;
+    height: 80px;
+    font-size: 20px;
     border-radius: 48px;
     background: var(--linear, linear-gradient(90deg, #FF42A5 0%, #FF42A5 100%));
 }
@@ -90,9 +95,10 @@ nav li a {
 .btn-primary-bth {
     cursor: pointer;
     border: none;
-    width: 120px;
+    width: 180px;
+    font-size: 20px;
     color: #fff;
-    height: 40px;
+    height: 80px;
     border-radius: 48px;
     background: #4EC5F7;
 }
@@ -100,9 +106,11 @@ nav li a {
 .btn-primary-btn-1 {
     cursor: pointer;
     border: none;
-    width: 120px;
+    font-size: 20px;
+    font-weight: 500;
+    width: 180px;
     color: #fff;
-    height: 40px;
+    height: 80px;
     border-radius: 48px;
     background: var(--linear, linear-gradient(90deg, #FF42A5 0%, #FF42A5 100%));
 
@@ -124,23 +132,28 @@ h1 {
 
 h2 {
     color: #0B0223;
-
     text-align: center;
-    text-align: left;
-    font-size: 40px;
-    font-style: normal;
+    font-size: 48px;
     font-weight: 600;
-
+    text-transform: uppercase;
 
 }
 
 
-.banner-section {
+.container-section {
     background: url(images/Group\ 14.png);
+}
+
+.banner-section {
+
     fill: linear-gradient(223deg, rgba(140, 87, 238, 0.03) 0%, rgba(241, 68, 174, 0.03) 100%);
     display: flex;
     justify-content: space-between;
 
+}
+
+.banner-img {
+    margin-left: 170px;
 }
 
 .banner-img img {
@@ -149,6 +162,9 @@ h2 {
     height: 100%;
 }
 
+.banner-items {
+    align-items: center;
+}
 
 .banner-text {
     text-align: left;
@@ -223,16 +239,16 @@ h2 {
 }
 
 .online-gamer-card {
-  
+
     gap: 60px;
     width: 40%;
     height: 400px;
-   
-   
+
+
 }
 
 
-.color-text{
+.color-text {
     color: #FF42A5;
 }
 
@@ -242,6 +258,7 @@ h2 {
 /* play container style */
 
 .play-container {
+    margin-bottom: -130px;
     padding: 20px 220px;
     display: flex;
     justify-content: space-around;
@@ -387,7 +404,7 @@ h2 {
 .icon {
     width: 30.13px;
     height: 25px;
-   
+
 }
 
 h6 {
